--- a/ДЗ 02.06.24/index.html
+++ b/ДЗ 02.06.24/index.html
@@ -8,8 +8,8 @@
 <body>
     <form name="form">
         <input type="text" name="username">
-        <input type="tel" name="password">
-        <input type="button" onclick="check_username()" value="Проверка">
+        <input type="text" name="password">
+        <input type="button" onclick="check_username_and_password();" value="Проверка">
     </form>
     <div id="res"></div>
     <script src="js/script.js"></script>
