--- a/Проект 06.05.24/index.html
+++ b/Проект 06.05.24/index.html
@@ -27,6 +27,10 @@
 
             </div>
 
+            <div id="hamburger">
+                    
+            </div>
+
         </div>
 </header>
 
@@ -83,5 +87,8 @@
     </div>
 
     </div>
+
+<script src="js/script.js"></script>
+    
 </footer>
 </html>
