--- a/ДЗ 24.06.24/index.html
+++ b/ДЗ 24.06.24/index.html
@@ -42,9 +42,7 @@
                 </div>
             </div>
 
-            <div id="hamburger">
-
-            </div>
+            <div id="hamburger"></div>
 
         </div>
 </header>
