--- a/kino/index.html
+++ b/kino/index.html
@@ -25,6 +25,34 @@
         </div>
     </div>
 
+
+
+    <div class="header-mobile">
+        <div class="logo">
+            <img src="images/logo.png" alt="Logo">
+        </div>
+
+        <div id="burger-btn">
+            
+        </div>
+
+        <div class="menu-mobile">
+            <ul>
+                <li><a href="">live tv</a></li>
+                <div class="circle-mobile"></div>
+                <li><a href="">Movies</a></li>
+                <li><a href="">Shows</a></li>
+                <li><a href=""><img src="images/search.png" width="14px"></a></li>
+                <li class="special"><a href="">Log in</a></li>
+                <li><a href="">Register</a></li>
+            </ul>
+        </div>
+    </div>
+
+
+   
+    
+
     <div class="slider">
         <img src="images/fight-club-cover-fructcode_4 1.png" class="slider-image">
         <div class="gradient1"></div>
@@ -42,5 +70,8 @@
             <div class="dot"></div>
         </div>
     </div>
+
+
+    <script src="js/script.js"></script>
 </body>
 </html>
