--- a/kino/movie_page.html
+++ b/kino/movie_page.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KinoMonster</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -45,65 +45,25 @@
         </div>
     </div>
 
-    <div class="slider">
-        <img src="images/fight-club-cover-fructcode_4 1.png" class="slider-image">
-        <div class="gradient1"></div>
-        <div class="gradient2"></div>
-        <div class="gradient3"></div>
-        <div class="slider-content">
-            <h1>Fight Club</h1>
-            <p>Discontented with his capitalistic lifestyle, a white-collared insomniac forms an underground fight club with Tyler.</p>
-            <a href="movie_page.html" class="watch-now">WATCH NOW</a>
-        </div>
-        <div class="slider-dots">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-        </div>
+    <iframe width="100%" height="850" src="https://www.youtube.com/embed/C7-7qQ61QHU?si=qjugvqWNO8aDI_LK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <div class="links_movie">
+        <ul>
+            <li><a id="about" href="#">About</a></li>
+            <li><a id="cast" href="#">Cast</a></li>
+            <li><a id="reviews" href="#">Reviews</a></li>
+        </ul>
     </div>
 
+    <div id="info_movie">
+        
+    </div>
+
+
+
     <div class="main">
-        <div class="section">
-            <h2 class="h20">On now</h2>
-            <div class="on_now">
-                <div>
-                    <img src="images/1.png" alt="">
-                    <p>S5 E2</p>
-                    <h3>Live with Kelly and Ryan</h3>
-                </div>
+       
 
-                <div>
-                    <img src="images/2.png" alt="">
-                    <p>S12 E2 </p>
-                    <h3>The Big Bang Theory</h3>
-                </div>
-
-                <div>
-                    <img src="images/a4b759231af2ac9111445b871d7d0a2341f88f41 1.jpg" alt="">
-                    <p>S95 E2 </p>
-                    <h3>South Park</h3>
-                </div>
-
-                <div>
-                    <img src="images/stranger-things-season-3-eleven-max-ice-cream-bus 1.jpg" alt="">
-                    <p>S8 E6</p>
-                    <h3>Stranger Things</h3>
-                </div>
-
-                <div>
-                    <img src="images/fclub.jpg" alt="">
-                    <p>MOVIE</p>
-                    <h3>Fight Club</h3>
-                </div>
-
-                <div>
-                    <img src="images/stands.jpg" alt="">
-                    <p>S1 E3</p>
-                    <h3>The Stand</h3>
-                </div>
-            </div>
-        </div>
 
         <div class="section">
             <h2 class="h21">Popular Shows And Movies</h2>
